Arreglos en el codigo

--- a/src/views/executives.ejs
+++ b/src/views/executives.ejs
@@ -11,7 +11,7 @@
                 <a>Datos</a>
             </li>
             <li class="breadcrumb-item active">
-                <strong>Consulta de Ejecutivos</strong>
+                <strong>Consulta de Ejecutivo de Reclamos</strong>
             </li>
         </ol>
     </div>
@@ -21,7 +21,7 @@
         <div class="col-lg-12">
             <div class="ibox ">
                 <div class="ibox-title">
-                    <h5>Ejecutivos</h5>
+                    <h5>Ejecutivo de Reclamos</h5>
                 </div>
                 <div class="ibox-content">
                     <div class="table-responsive">
