--- a/src/views/layouts/header.ejs
+++ b/src/views/layouts/header.ejs
@@ -58,8 +58,8 @@
                             <li><a href="/sistema/insurers">Consultar Aseguradoras</a></li>
                             <li><a href="/sistema/add-own-agent">Agregar Agente Propio</a></li>
                             <li><a href="/sistema/own-agents">Consultar Agentes Propios</a></li>
-                            <li><a href="/sistema/add-executive">Agregar Ejecutivo</a></li>
-                            <li><a href="/sistema/executives">Consultar Ejecutivos</a></li>
+                            <li><a href="/sistema/add-executive">Agregar Ejecutivo de Reclamos</a></li>
+                            <li><a href="/sistema/executives">Consultar Ejecutivos de Reclamos</a></li>
                         </ul>
                     </li>
                     <li>
@@ -101,7 +101,7 @@
                             <li><a href="/sistema/policies">Consultar Pólizas</a></li>
                         </ul>
                     </li>
-                    <li>
+                    <!--li>
                         <a href="#"><i class="fa fa-file-text"></i> <span class="nav-label">Reclamos</span><span class="fa arrow"></span></a>
                         <ul class="nav nav-second-level collapse">
                             <li><a href="/sistema/add-refund">Agregar Reembolsos</a></li>
@@ -113,7 +113,7 @@
                             <li><a href="/sistema/add-amp">Agregar AMP</a></li>
                             <li><a href="/sistema/amp">Consultar AMP</a></li>
                         </ul>
-                    </li>
+                    </li-->
                     <li>
                         <a href="#"><i class="fa fa-clipboard"></i> <span class="nav-label">Reportes</span><span class="fa arrow"></span></a>
                         <ul class="nav nav-second-level collapse">
