--- a/src/views/letterGuaranteeForm.ejs
+++ b/src/views/letterGuaranteeForm.ejs
@@ -40,6 +40,19 @@
                                         </div>
                                     </div>
                                     <div class="hr-line-dashed"></div>
+                                    <div class="form-group">
+                                        <div class="form-group row"><label class="col-sm-3 col-form-label">Moneda</label>
+                                            <div class="col-sm-9">
+                                                <select class="form-control" name="tipo_moneda_carta_aval">
+                                                    <option selected value="0">Seleccione *</option>
+                                                        <option value="Bolivar">Bolivar</option>
+                                                        <option value="Dólar">Dólar</option>
+                                                        <option value="Euros">Euros</option>
+                                                </select>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="hr-line-dashed"></div>
                                     <div class="form-group row"><label class="col-sm-3 col-form-label">Fecha Ocurrencia</label>
                                         <div class="col-sm-9">
                                             <input 
@@ -96,14 +109,28 @@
                         <div class="col-lg-6">
                             <div class="ibox">
                                 <div class="form-control">
-                                    <div class="form-group row"><label class="col-sm-3 col-form-label">Monto</label>
+                                    <div class="form-group row"><label class="col-sm-3 col-form-label">Monto Reclamado</label>
                                         <div class="col-sm-9">
                                             <input 
                                                 type="number"
                                                 step="0.01"
-                                                name="monto_carta_aval"
-                                                id="monto_carta_aval" 
-                                                placeholder="Monto *"
+                                                name="monto_reclamado_carta_aval"
+                                                id="monto_reclamado_carta_aval" 
+                                                placeholder="Monto Reclamado *"
+                                                class="form-control"
+                                                required
+                                            >
+                                        </div>
+                                    </div>
+                                    <div class="hr-line-dashed"></div>
+                                    <div class="form-group row"><label class="col-sm-3 col-form-label">Monto Pagado</label>
+                                        <div class="col-sm-9">
+                                            <input 
+                                                type="number"
+                                                step="0.01"
+                                                name="monto_pagado_carta_aval"
+                                                id="monto_pagado_carta_aval" 
+                                                placeholder="Monto Pagado *"
                                                 class="form-control"
                                                 required
                                             >
