--- a/src/views/editExecutive.ejs
+++ b/src/views/editExecutive.ejs
@@ -12,7 +12,7 @@
                 <a>Datos</a>
             </li>
             <li class="breadcrumb-item active">
-                <strong>Editar Ejecutivo</strong>
+                <strong>Editar Ejecutivo de Reclamos</strong>
             </li>
         </ol>
     </div>
@@ -80,7 +80,19 @@
                                             >
                                         </div>
                                     </div>
-                                    </br>                                    
+                                    <div class="hr-line-dashed"></div>
+                                    <div class="form-group row"><label class="col-sm-2 col-form-label">Grupo</label>
+                                        <div class="col-sm-10">
+                                            <input 
+                                                type="text"
+                                                name="grupo_ejecutivo"
+                                                id="grupo_ejecutivo" 
+                                                value="<%= executive.grupo_ejecutivo %>" 
+                                                class="form-control"
+                                                required
+                                            >
+                                        </div>
+                                    </div>                                    
                                 </div>
                             </div>
                         </div>
@@ -124,18 +136,19 @@
                                             ><%= executive.direccion_ejecutivo %></textarea>
                                         </div>
                                     </div>
+                                    <div class="form-group row"><label class="col-sm-2 col-form-label"></label>
+                                        <div class="col-sm-10">
+                                            <input 
+                                                type="hidden"
+                                                name="id_ejecutivo"
+                                                id="id_ejecutivo"  
+                                                value="<%= executive.id_ejecutivo %>" 
+                                                class="form-control"
+                                            >
+                                        </div>
+                                    </div>
+                                    </br>
                                 </div>
-                            </div>
-                        </div>
-                        <div class="form-group row"><label class="col-sm-2 col-form-label"></label>
-                            <div class="col-sm-10">
-                                <input 
-                                    type="hidden"
-                                    name="id_ejecutivo"
-                                    id="id_ejecutivo"  
-                                    value="<%= executive.id_ejecutivo %>" 
-                                    class="form-control"
-                                >
                             </div>
                         </div>
                     </div>
