--- a/src/views/editLegalInsured.ejs
+++ b/src/views/editLegalInsured.ejs
@@ -88,7 +88,18 @@
                                             </select>
                                         </div>
                                     </div>
-                                    </br>
+                                    <div class="hr-line-dashed"></div>
+                                    <div class="form-group row"><label class="col-sm-3 col-form-label">Dirección</label>
+                                        <div class="col-sm-9">
+                                            <textarea 
+                                                name="direccion_asegurado_per_jur"
+                                                id="direccion_asegurado_per_jur" 
+                                                placeholder="Dirección *" 
+                                                class="form-control"
+                                                required
+                                            ><%= legalInsured.direccion_asegurado_per_jur %></textarea>
+                                        </div>
+                                    </div>
                                 </div>
                             </div>
                         </div>
@@ -121,6 +132,19 @@
                                         </div>
                                     </div>
                                     <div class="hr-line-dashed"></div>
+                                        <div class="form-group row"><label class="col-sm-3 col-form-label">Cargo</label>
+                                            <div class="col-sm-9">
+                                                <input 
+                                                    type="text"
+                                                    name="cargo_contacto_per_jur"
+                                                    id="cargo_contacto_per_jur" 
+                                                    value="<%= legalInsured.cargo_contacto_per_jur %>" 
+                                                    class="form-control"
+                                                    required
+                                                >
+                                            </div>
+                                        </div>
+                                    <div class="hr-line-dashed"></div>
                                     <div class="form-group row"><label class="col-sm-3 col-form-label">Email</label>
                                         <div class="col-sm-9">
                                             <input 
@@ -147,30 +171,21 @@
                                             >
                                         </div>
                                     </div>
-                                    <div class="hr-line-dashed"></div>
-                                    <div class="form-group row"><label class="col-sm-3 col-form-label">Dirección</label>
-                                        <div class="col-sm-9">
-                                            <textarea 
-                                                name="direccion_asegurado_per_jur"
-                                                id="direccion_asegurado_per_jur" 
-                                                placeholder="Dirección *" 
+                                    <div class="form-group row"><label class="col-sm-2 col-form-label"></label>
+                                        <div class="col-sm-10">
+                                            <input 
+                                                type="hidden"
+                                                name="id_asegurado_per_jur"
+                                                id="id_asegurado_per_jur"  
+                                                value="<%= legalInsured.id_asegurado_per_jur %>" 
                                                 class="form-control"
-                                                required
-                                            ><%= legalInsured.direccion_asegurado_per_jur %></textarea>
+                                            >
                                         </div>
                                     </div>
+                                    </br>
+                                    </br>
+                                    </br>
                                 </div>
-                            </div>
-                        </div>
-                        <div class="form-group row"><label class="col-sm-2 col-form-label"></label>
-                            <div class="col-sm-10">
-                                <input 
-                                    type="hidden"
-                                    name="id_asegurado_per_jur"
-                                    id="id_asegurado_per_jur"  
-                                    value="<%= legalInsured.id_asegurado_per_jur %>" 
-                                    class="form-control"
-                                >
                             </div>
                         </div>
                     </div>
