--- a/src/views/editOwnAgent.ejs
+++ b/src/views/editOwnAgent.ejs
@@ -80,7 +80,20 @@
                                             >
                                         </div>
                                     </div>
-                                    </br>                                    
+                                    <div class="hr-line-dashed"></div>
+                                    <div class="form-group row"><label class="col-sm-2 col-form-label">Comisión</label>
+                                        <div class="col-sm-10">
+                                            <input 
+                                                type="number"
+                                                step="0.01"
+                                                name="porcentaje_agente_propio"
+                                                id="porcentaje_agente_propio" 
+                                                value="<%= ownAgent.porcentaje_agente_propio %>" 
+                                                class="form-control"
+                                                required
+                                            >
+                                        </div>
+                                    </div>
                                 </div>
                             </div>
                         </div>
@@ -124,18 +137,19 @@
                                             ><%= ownAgent.direccion_agente_propio %></textarea>
                                         </div>
                                     </div>
+                                    <div class="form-group row"><label class="col-sm-2 col-form-label"></label>
+                                        <div class="col-sm-10">
+                                            <input 
+                                                type="hidden"
+                                                name="id_agente_propio"
+                                                id="id_agente_propio"  
+                                                value="<%= ownAgent.id_agente_propio %>" 
+                                                class="form-control"
+                                            >
+                                        </div>
+                                    </div>
+                                    </br>
                                 </div>
-                            </div>
-                        </div>
-                        <div class="form-group row"><label class="col-sm-2 col-form-label"></label>
-                            <div class="col-sm-10">
-                                <input 
-                                    type="hidden"
-                                    name="id_agente_propio"
-                                    id="id_agente_propio"  
-                                    value="<%= ownAgent.id_agente_propio %>" 
-                                    class="form-control"
-                                >
                             </div>
                         </div>
                     </div>
