--- a/src/views/executiveForm.ejs
+++ b/src/views/executiveForm.ejs
@@ -12,7 +12,7 @@
                 <a>Datos</a>
             </li>
             <li class="breadcrumb-item active">
-                <strong>Agregar Ejecutivo</strong>
+                <strong>Agregar Ejecutivo de Reclamos</strong>
             </li>
         </ol>
     </div>
@@ -65,7 +65,19 @@
                                             >
                                         </div>
                                     </div>
-                                    </br>                                    
+                                    <div class="hr-line-dashed"></div>
+                                    <div class="form-group row"><label class="col-sm-2 col-form-label">Grupo</label>
+                                        <div class="col-sm-10">
+                                            <input 
+                                                type="text"
+                                                name="grupo_ejecutivo"
+                                                id="grupo_ejecutivo" 
+                                                placeholder="Grupo de Ejecutivo *" 
+                                                class="form-control"
+                                                required
+                                            >
+                                        </div>
+                                    </div>                                    
                                 </div>
                             </div>
                         </div>
@@ -110,6 +122,17 @@
                                             ></textarea>
                                         </div>
                                     </div>
+                                    <div class="form-group row"><label class="col-sm-2 col-form-label"></label>
+                                        <div class="col-sm-10">
+                                            <input 
+                                                type="hidden"
+                                                name=""
+                                                id=""
+                                                class="form-control"
+                                            >
+                                        </div>
+                                    </div>
+                                    </br>
                                 </div>
                             </div>
                         </div>
