--- a/src/views/legalInsuredForm.ejs
+++ b/src/views/legalInsuredForm.ejs
@@ -88,7 +88,18 @@
                                             </select>
                                         </div>
                                     </div>
-                                    </br>
+                                    <div class="hr-line-dashed"></div>
+                                    <div class="form-group row"><label class="col-sm-3 col-form-label">Dirección</label>
+                                        <div class="col-sm-9">
+                                            <textarea 
+                                                name="direccion_asegurado_per_jur"
+                                                id="direccion_asegurado_per_jur" 
+                                                placeholder="Dirección *" 
+                                                class="form-control"
+                                                required
+                                            ></textarea>
+                                        </div>
+                                    </div>
                                 </div>
                             </div>
                         </div>
@@ -116,6 +127,19 @@
                                                     name="nombre_contacto_per_jur"
                                                     id="nombre_contacto_per_jur" 
                                                     placeholder="Persona Contacto de Empresa *" 
+                                                    class="form-control"
+                                                    required
+                                                >
+                                            </div>
+                                        </div>
+                                        <div class="hr-line-dashed"></div>
+                                        <div class="form-group row"><label class="col-sm-3 col-form-label">Cargo</label>
+                                            <div class="col-sm-9">
+                                                <input 
+                                                    type="text"
+                                                    name="cargo_contacto_per_jur"
+                                                    id="cargo_contacto_per_jur" 
+                                                    placeholder="Cargo de Persona Contacto de Empresa *" 
                                                     class="form-control"
                                                     required
                                                 >
@@ -151,18 +175,19 @@
                                             </div>
                                         </div>
                                     </div>
-                                    <div class="hr-line-dashed"></div>
-                                    <div class="form-group row"><label class="col-sm-3 col-form-label">Dirección</label>
-                                        <div class="col-sm-9">
-                                            <textarea 
-                                                name="direccion_asegurado_per_jur"
-                                                id="direccion_asegurado_per_jur" 
-                                                placeholder="Dirección *" 
+                                    <div class="form-group row"><label class="col-sm-2 col-form-label"></label>
+                                        <div class="col-sm-10">
+                                            <input 
+                                                type="hidden"
+                                                name=""
+                                                id=""
                                                 class="form-control"
-                                                required
-                                            ></textarea>
+                                            >
                                         </div>
                                     </div>
+                                    </br>
+                                    </br>
+                                    </br>
                                 </div>
                             </div>
                         </div>
