--- a/src/views/ownAgentForm.ejs
+++ b/src/views/ownAgentForm.ejs
@@ -65,7 +65,20 @@
                                             >
                                         </div>
                                     </div>
-                                    </br>                                    
+                                    <div class="hr-line-dashed"></div>
+                                    <div class="form-group row"><label class="col-sm-2 col-form-label">Comisión</label>
+                                        <div class="col-sm-10">
+                                            <input 
+                                                type="number"
+                                                step="0.01"
+                                                name="porcentaje_agente_propio"
+                                                id="porcentaje_agente_propio" 
+                                                placeholder="Comisión de Agente Propio *" 
+                                                class="form-control"
+                                                required
+                                            >
+                                        </div>
+                                    </div>
                                 </div>
                             </div>
                         </div>
@@ -110,6 +123,17 @@
                                             ></textarea>
                                         </div>
                                     </div>
+                                    <div class="form-group row"><label class="col-sm-2 col-form-label"></label>
+                                        <div class="col-sm-10">
+                                            <input 
+                                                type="hidden"
+                                                name=""
+                                                id=""
+                                                class="form-control"
+                                            >
+                                        </div>
+                                    </div>
+                                    </br>
                                 </div>
                             </div>
                         </div>
