Arreglos en el codigo 2

--- a/src/views/legalInsureds.ejs
+++ b/src/views/legalInsureds.ejs
@@ -148,7 +148,24 @@ $(document).ready(function(){
                 "data": "",
                 "render": (data, type, row) => {
                         return `<form class="form-inline" method="post" action="/sistema/remove-legal-insured/${row.id_asegurado_per_jur}">
-                                    <button class="btn btn-danger" type="submit"><i class="fa fa-ban"></i></button>
+                                    <div class="row">
+                                        <div class="col-sm-6 col-lg-12" style="padding-bottom: 10px;">
+                                            <button 
+                                                class="btn btn-danger" 
+                                                type="submit"
+                                            >
+                                                <i class="fa fa-ban"></i>
+                                            </button>
+                                        </div> 
+                                        <div class="col-sm-6 col-lg-12">
+                                            <textarea 
+                                                name="obser_deshabilitar_per_jur"
+                                                id="obser_deshabilitar_per_jur" 
+                                                placeholder="Observaciones de Deshabilitar *" 
+                                                class="form-control"
+                                            ></textarea>
+                                        </div>
+                                    </div>
                                 </form>`;
                 }
             }
